[project]
name = "flux_corrector"
description = "This model was fine-tuned on Flux.1-Dev to with reflection tuning to serve as a corrector for self-refinement framework introduced in From Reflection to Perfection: Scaling Inference-Time Optimization for Text-to-Image Diffusion Models via Reflection Tuning. "
version = "1.0.0"
license = {file = "LICENSE"}

[project.urls]
Repository = "https://github.com/BNP1111/comfyui_flux_corrector"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "comfyui_flux_corrector"
Icon = ""
